# jubilant-fishstick

./: LICENSE  README.md  pyproject.toml  tox.ini  wizard.py
src/harborpi/: main.py
src/harborpi/core/: acquisition.py  database.py  interpreter.py
src/harborpi/utils/: astronomy.py  config.py  network.py
src/harborpi/web/: app.py
src/harborpi/web/templates/: index.html
