[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harborpi"
version = "0.1.0"
description = "A Raspberry Pi-based local logbook and dashboard for sailors."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Werner Brand", email = "werner.brand@mowi.com" }
]
license = { text = "MIT" }

dependencies = [
  "flask>=3.0,<4",
  "apscheduler>=3.10,<4",
  "requests>=2.32,<3",
  "python-dotenv>=1.0,<2",
  "geopy>=2.4,<3",
  "astral>=3.2,<4",          # for sun/moon times
  "sqlite-utils>=3.36,<4",
  "jinja2>=3.1,<4"
]

[project.urls]
Homepage = "https://github.com/krohmos/jubilant-fishstick"
Repository = "https://github.com/krohmos/jubilant-fishstick"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
harborpi = "harborpi.app:main"

[tool.uv]
default-groups = ["dev"]

[dependency-groups]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "mypy",
  "build",
  "twine",
]