[project]
name = "harborpi"
version = "0.1.0"
description = "Captain's companion logbook (Project Jubilant Fishstick)"
dependencies = [
    "flask",
    "apscheduler",
    "pydantic-settings",
    "pyserial",
    "pynmea2",
    "requests",
    "ephem",
    # "smbus2",        # For optional I2C sensors
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
# This defines the command to run your app
harborpi = "harborpi.main:run"